[tool.poetry]
name = "user_api"
version = "0.1.0"
description = ""
authors = ["Premansh Pareek <premanshpareek@gmail.com>"]
readme = "README.md"
packages = [{ include = "user_api"}]

[tool.poetry.dependencies]
python = "^3.9"
flask = "^3.0.3"
flask-sqlalchemy = "^3.1.1"
postgres = "^4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
